# luaz

./: .dlist.c.swp  .driver.h.swp  .odbc.c.swp  Makefile  Makefile.am  Makefile.in  README.md  config.h.in  config.lua  configure  configure.ac  configure.lua  connect.c  connect.h  dblist.c  dblist.h  demo.lua  deps.h  dlist.c  dlist.h  driver.c  driver.h  io.c  io.h  list.c  list.h  load.c  load.h  loading.c  loading.h  lz_loading.c  lz_loading.h  lz_require.c  odbc.c  odbc.h  option.c  option.h  pipe.c  require.c  rows.c  (+10 more)
autom4te.cache/: output.0  output.1  traces.0  traces.1
internal/: Makefile.am  Makefile.in  configure.lua  dbengine.lua  dbtype.lua  exec.lua  luaz.lua  sql.bind.lua  sql.driver.lua  sql.type.lua  test.lua
odbc/: odbc.c  odbc.h
script/: Makefile.am  Makefile.in
sh/: Makefile.am  Makefile.in  sql_trance.lua
src/: Makefile.am  Makefile.in  lz_driver.c  lz_list.c  lz_list.h  lz_load.c  lz_odbc.c  lz_odbc.h  lz_option.c  lz_pipe.c  lz_pipe.h  lz_require.c  lz_xgsql.c  lz_xgsql.h  sl_driver.c  sl_list.c  sl_load.c  sl_odbc.c  sl_option.c  sl_require.c  sl_xgsql.h
xgci/: xgsql.c  xgsql.h
